# NXZip

./: .gitignore  CLEANUP_COMPLETE.md  CMakeLists.txt  COMPREHENSIVE_TEST_REPORT.md  Cargo.toml  FINAL_COMPETITIVE_REPORT.md  FORMAT_ANALYSIS.md  GUI_COMPLETION_SUMMARY.md  InstallationLog.txt  NXZIP_COMMERCIAL_SUCCESS.md  NXZip_Standalone.py  PERFORMANCE_ANALYSIS_REPORT.md  PHASE8_FINAL_SUMMARY.md  PHASE8_GUIDE.md  PHASE8_HONEST_EVALUATION.md  PROJECT_COMPLETION.md  PROJECT_STATUS.md  README.md  README_CLEAN.md  README_FINAL.md  README_OPTIMIZED.md  README_STANDALONE.md  REPOSITORY_STRUCTURE.md  TECHNICAL.md  TOOL_COMPLETION.md  UI_IMPROVEMENTS.md  benchmark_comparison.py  benchmark_nxzip_vs_standard.py  benchmark_optimized_comprehensive.py  competitive_benchmark.py  create_complete_tmc_inverse.py  create_tmc_fixed_engine.py  example_usage.py  fix_gui_tmc_args.py  fix_tmc_decompression.py  fix_tmc_reversibility.py  fix_verification_test.py  implement_tmc_safety.py  large_test_decrypted.txt  large_test_encrypted.nxz  (+34 more)
.github/: copilot-instructions.md
NXZip-Python/: README.md  TMC_v6_BENCHMARK_ANALYSIS.md  TMC_v6_COMPREHENSIVE_EVALUATION.md  TMC_v6_FINAL_EVALUATION_REPORT.md  benchmark_competitor_comparison.py  benchmark_competitor_results.json  benchmark_comprehensive.py  benchmark_nxz_final.py  benchmark_nxz_fixed.py  benchmark_nxz_integrated.py  benchmark_simple_nxz.py  benchmark_tmc_v9.py  benchmark_tmc_v9_comprehensive.py  benchmark_tmc_vs_standards.py  comprehensive_benchmark.py  comprehensive_benchmark_results_1753928502.txt  comprehensive_benchmark_results_1753928601.txt  comprehensive_evaluation_report.py  comprehensive_performance_benchmark.py  compression_effectiveness_test.py  compression_ratio_analysis.py  compression_reality_check.py  debug_nxz_checksum.py  debug_spe.py  debug_tmc_v91.py  detailed_ratio_analysis.py  diagnose_compression.py  direct_performance_test.py  extended_benchmark.py  final_comprehensive_benchmark.py  final_tradeoff_analysis.py  final_ultimate_benchmark.py  goal_verification_benchmark.py  large_test.py  lightweight_mode.py  minimal_test.py  module_separation_progress.py  nexus_tmc_numba_optimized.py  nexus_vs_competitors_benchmark.py  normal_mode.py  (+78 more)
NXZip-Python/nxzip/: __init__.py  cli.py  cli_adaptive.py  cli_final.py  cli_official.py  cli_unified.py  nexus_cli.py
NXZip-Python/nxzip/crypto/: encrypt.py
NXZip-Python/nxzip/engine/: __init__.py  compare_7z.py  compressor.py  nexus.py  nexus_adaptive.py  nexus_advanced_optimizer.py  nexus_advanced_v3.py  nexus_audio.py  nexus_audio_advanced.py  nexus_audio_fixed.py  nexus_breakthrough.py  nexus_enhanced_v5.py  nexus_experimental.py  nexus_extreme.py  nexus_final_battle_benchmark.py  nexus_final_battle_results.json  nexus_image.py  nexus_image_advanced.py  nexus_image_fixed.py  nexus_nxz_unified.py  nexus_nxz_unified_simple.py  nexus_optimized_v4.py  nexus_parallel_engine.py  nexus_parallel_engine_clean.py  nexus_simple.py  nexus_simple_fast.py  nexus_spe_integrated_engine.py  nexus_spe_nxz_benchmark_results.json  nexus_spe_nxz_vs_competitors.py  nexus_speed_optimized.py  nexus_target.py  nexus_text.py  nexus_theory_core.py  nexus_theory_engine.py  nexus_tmc.py  nexus_tmc_engine.py  nexus_tmc_engine_v2.py  nexus_tmc_v10_lite.py  nexus_tmc_v3_benchmark.py  nexus_tmc_v3_complete.py  (+37 more)
NXZip-Python/nxzip/engine/analyzers/: __init__.py  meta_analyzer.py
NXZip-Python/nxzip/engine/core/: __init__.py
NXZip-Python/nxzip/engine/parallel/: __init__.py  pipeline_processor.py
NXZip-Python/nxzip/engine/transforms/: __init__.py  bwt_transform.py  leco_transform.py  post_bwt_pipeline.py  tdt_transform.py
NXZip-Python/nxzip/engine/utils/: lz77_encoder.py
NXZip-Python/nxzip/formats/: __init__.py  enhanced_nxz.py  nxz_format.py  nxz_format_jit.py
NXZip-Python/nxzip/utils/: constants.py  progress.py
NXZip-Python/sample/: COT-001.7z  COT-001.7z.7zopt  COT-001.7z.sdc  COT-001.jpg.isdc  COT-001.jpg.jpgopt  COT-001.jpg.nximg  COT-001.jpg.nxsic  COT-001.jpg.nxufc  COT-001.jpg.nxufd  COT-001.jpg.sdc  analyze_reconstruction.py  debug_block_generation.py  debug_decompress.py  debug_detailed.py  debug_fixed_nexus.py  debug_nexus_infection.py  debug_shape_transformation.py  debug_simple.py  debug_string.py  debug_transform.py  generated-music-1752042054079.7z  generated-music-1752042054079.wav.nxufc  generated-music-1752042054079.wav.sdc  nexus_advanced_engine.py  nexus_backup.py  nexus_comprehensive_test.py  nexus_full_infection_test.py  nexus_theory_complete.py  reversibility_analysis.py  simple_block_test.py  test_element_consolidation.py  test_fixed_multimedia.py  test_fundamental.py  test_individual.py  test_individual_files.py  test_individual_silent.py  test_multilayer_nexus.py  test_nexus_fast.py  test_nexus_reversibility.py  test_no_consolidation.py  (+7 more)
NXZip-Python/sample/nxz_output/: 陰謀論_restored.7z
NXZip-Python/tests/: benchmark_comprehensive.py  test_basic.py  test_tmc_fix.py
NXZip-Python/tests_archive/: test_basic_experimental.py  test_enhanced_performance.py  test_experimental.py  test_nexus_completion.py  test_progressive_compression.py  test_quick_compression.py  test_real_files.py  test_real_world_performance.py  test_small_to_large.py  test_speed_comparison.py  test_ultra_compress.py  test_ultra_debug.py  test_ultra_direct.py
NXZip-Release/: NXZip_Multilingual.py  NXZip_Professional.py  NXZip_Professional_v2.py  README.md  (+26 more)
rust-nxzip/src-tauri/: Cargo.toml  tauri.conf.json
rust-nxzip/src-tauri/src/: lib.rs
(+153 files in other folders)
