[package]
name = "nxzip"
version = "0.1.0"
edition = "2021"
description = "次世代統合アーカイブシステム - SPE暗号 × 高効率可逆圧縮 × セキュリティ強化"
license = "MIT"
authors = ["NXZip Team"]

[dependencies]
# CLI Framework
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"

# Compression
zstd = "0.13"
xz2 = "0.1"
lzma-rs = "0.3"

# Cryptography
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
pbkdf2 = "0.12"
argon2 = "0.5"
rand = "0.8"

# Hashing
blake3 = "1.5"
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# File I/O and Utilities
memmap2 = "0.9"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bin]]
name = "nxzip"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
