[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "nxzip"
version = "2.0.0"
description = "NXZip - Next-Generation Archive System with SPE Technology"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NXZip Team", email = "team@nxzip.org"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.8"
dependencies = [
    "cryptography>=41.0.0",
    "tqdm>=4.65.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
fast = ["zstandard>=0.21.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
nxzip = "nxzip.cli:main"

[project.urls]
Homepage = "https://github.com/Negi000/NXZip"
Repository = "https://github.com/Negi000/NXZip"
Documentation = "https://nxzip.readthedocs.io"
"Bug Tracker" = "https://github.com/Negi000/NXZip/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nxzip*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
