[package]
name = "nxzip-gui"
version = "1.0.0"
description = "NXZip GUI - Next-generation archive system interface"
authors = ["NXZip Team"]
license = "MIT"
repository = "https://github.com/your-repo/nxzip"
edition = "2021"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nxzip_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
nxzip = { path = ".." }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
